assets/css/github-markdown.css
/* ... */
.markdown-body .pl-mi1 {
    background-color: #f0fff4;
    color: #22863a;
}

.markdown-body .pl-mc {
    background-color: #ffebda;
    color: #e36209;
}

.markdown-body .pl-mi2 {
    background-color: #005cc5;
    color: #f6f8fa;
}

.markdown-body .pl-mdr {
    color: #6f42c1;
    font-weight: 700;
}

.markdown-body .pl-ba {
    color: #586069;
}

.markdown-body .pl-sg {
    color: #959da5;
}

.markdown-body .pl-corl {
    color: #032f62;
    text-decoration: underline;
}

.markdown-body details {
    display: block;
}

.markdown-body summary {
    display: list-item;
}

.markdown-body a {
    background-color: transparent;
}

.markdown-body a:active,
.markdown-body a:hover {
    outline-width: 0;
}

.markdown-body strong {
    font-weight: inherit;
    font-weight: bolder;
}

.markdown-body h1 {
    font-size: 2em;
    margin: 0.67em 0;
}

.markdown-body img {
    border-style: none;
}

.markdown-body code,
.markdown-body kbd,
.markdown-body pre {
    font-family: monospace, monospace;
    font-size: 1em;
}

.markdown-body hr {
    box-sizing: content-box;
    height: 0;
    overflow: visible;
}

.markdown-body input {
    font: inherit;
    margin: 0;
}

.markdown-body input {
    overflow: visible;
}

.markdown-body [type="checkbox"] {
    box-sizing: border-box;
    padding: 0;
}

.markdown-body * {
    box-sizing: border-box;
}

.markdown-body input {
    font-family: inherit;
    font-size: inherit;
    line-height: inherit;
}

.markdown-body a {
    color: #0366d6;
    text-decoration: none;
}

.markdown-body a:hover {
    text-decoration: underline;
}

.markdown-body strong {
    font-weight: 600;
}

.markdown-body hr {
    background: transparent;
    border: 0;
    border-bottom: 1px solid #dfe2e5;
    height: 0;
    margin: 15px 0;
    overflow: hidden;
}

.markdown-body hr:before {
    content: "";
    display: table;
}

.markdown-body hr:after {
    clear: both;
    content: "";
    display: table;
}

.markdown-body table {
    border-collapse: collapse;
    border-spacing: 0;
}

.markdown-body td,
.markdown-body th {
    padding: 0;
}

.markdown-body details summary {
    cursor: pointer;
}

.markdown-body h1,
.markdown-body h2,
.markdown-body h3,
.markdown-body h4,
.markdown-body h5,
.markdown-body h6 {
    margin-bottom: 0;
    margin-top: 0;
}

.markdown-body h1 {
    font-size: 34px;
}

.markdown-body h1,
.markdown-body h2 {
    font-weight: 600;
}

.markdown-body h2,
.markdown-body .h2 {
    font-size: 24px;
}

.markdown-body h3 {
    font-size: 20px;
}

.markdown-body h3,
.markdown-body h4 {
    font-weight: 600;
}

.markdown-body h4 {
    font-size: 16px;
}

.markdown-body h5 {
    font-size: 14px;
}

.markdown-body h5,
.markdown-body h6 {
    font-weight: 600;
}

.markdown-body h6 {
    font-size: 12px;
}

.markdown-body p {
    margin-bottom: 10px;
    margin-top: 0;
}

.markdown-body blockquote {
    margin: 0;
}

.markdown-body ol,
.markdown-body ul {
    margin-bottom: 0;
    margin-top: 0;
    padding-left: 0;
}

.markdown-body ol ol,
.markdown-body ul ol {
    list-style-type: lower-roman;
}

.markdown-body ol ol ol,
.markdown-body ol ul ol,
.markdown-body ul ol ol,
.markdown-body ul ul ol {
    list-style-type: lower-alpha;
}

.markdown-body dd {
    margin-left: 0;
}

.markdown-body code,
.markdown-body pre {
    font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, Courier,
        monospace;
    font-size: 12px;
}

.markdown-body pre {
    margin-bottom: 0;
    margin-top: 0;
}

.markdown-body input::-webkit-inner-spin-button,
.markdown-body input::-webkit-outer-spin-button {
    -webkit-appearance: none;
    appearance: none;
    margin: 0;
}

.markdown-body .border {
    border: 1px solid #e1e4e8 !important;
}

.markdown-body .border-0 {
    border: 0 !important;
}

.markdown-body .border-bottom {
    border-bottom: 1px solid #e1e4e8 !important;
}

.markdown-body .rounded-1 {
    border-radius: 3px !important;
}

.markdown-body .bg-white {
    background-color: #fff !important;
}

.markdown-body .bg-gray-light {
    background-color: #fafbfc !important;
}

.markdown-body .text-gray-light {
    color: #6a737d !important;
}

.markdown-body .mb-0 {
    margin-bottom: 0 !important;
}

.markdown-body .my-2 {
    margin-bottom: 8px !important;
    margin-top: 8px !important;
}

.markdown-body .pl-0 {
    padding-left: 0 !important;
}

.markdown-body .py-0 {
    padding-bottom: 0 !important;
    padding-top: 0 !important;
}

.markdown-body .pl-1 {
    padding-left: 4px !important;
}

.markdown-body .pl-2 {
    padding-left: 8px !important;
}

.markdown-body .py-2 {
    padding-bottom: 8px !important;
    padding-top: 8px !important;
}

.markdown-body .pl-3,
.markdown-body .px-3 {
    padding-left: 16px !important;
}

.markdown-body .px-3 {
    padding-right: 16px !important;
}

.markdown-body .pl-4 {
    padding-left: 24px !important;
}

.markdown-body .pl-5 {
    padding-left: 32px !important;
}

.markdown-body .pl-6 {
    padding-left: 40px !important;
}

.markdown-body .f6 {
    font-size: 12px !important;
}

.markdown-body .lh-condensed {
    line-height: 1.25 !important;
}

.markdown-body .text-bold {
    font-weight: 600 !important;
}

.markdown-body:before {
    content: "";
    display: table;
}

.markdown-body:after {
    clear: both;
    content: "";
    display: table;
}

.markdown-body> :first-child {
    margin-top: 0px;
}

.markdown-body> :last-child {
    margin-bottom: 0 !important;
}

.markdown-body a:not([href]) {
    color: inherit;
    text-decoration: none;
}

.markdown-body blockquote,
.markdown-body dl,
.markdown-body ol,
.markdown-body p,
.markdown-body pre,
.markdown-body table,
.markdown-body ul {
    margin-bottom: 16px;
    margin-top: 0;
}

.markdown-body hr {
    background-color: #e1e4e8;
    border: 0;
    height: 0.25em;
    margin: 24px 0;
    padding: 0;
}

.markdown-body blockquote {
    border-left: 0.25em solid #dfe2e5;
    color: #6a737d;
    padding: 0 1em;
}
/* ... */

